Change acknowledgement, fix background on mobile opening

--- a/app/styles/main-style.css
+++ b/app/styles/main-style.css
@@ -99,7 +99,7 @@ button {
   width: 70%;
   max-width: 1500px;
   margin: 0 auto;
-  text-align: justify;
+  text-align: center;
   font-family: "Urbanist", system-ui;
   font-size: 14px;
   color: #fff;
