--- a/app/styles/tablet-style.css
+++ b/app/styles/tablet-style.css
@@ -26,7 +26,9 @@
     -webkit-background-position: top;
   }
 }
-
+.opening {
+  background-position: 0 calc(100vh - 420px);
+}
 .albumButton {
   margin-bottom: 140px;
 }
